--- a/demos/smart-retail/01.exploring_data_with_spark.ipynb
+++ b/demos/smart-retail/01.exploring_data_with_spark.ipynb
@@ -169,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f84c8770a23040088ef1f58f1e6f2c02",
+       "model_id": "3aaba32dd4294489a54d2e2c4bf03b20",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0e11a536d2140dd9f28b1e1932e08a1",
+       "model_id": "a1a0b856246b4e3d8ca6f1670261880a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "43012d3a-51e1-40ba-8827-c1ef21175533",
    "metadata": {
     "tags": []
@@ -268,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76954add78b44fd7ad2b909e2cd6370a",
+       "model_id": "cb306add3ac94e1082d9718ce3e22961",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdd3d2643d414c5dac49b2a1fa5f16c8",
+       "model_id": "ab2536d93b084dd3a6186468535af625",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b26b8de67cb484ca29a02c9c65bdb22",
+       "model_id": "c8e9ab08c97641e68e51500395951524",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,12 +319,12 @@
     "tags": []
    },
    "source": [
-    "Next, let's import required libraries."
+    "Next, let's import the required libraries for working with Spark in this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ae6d03e4-d6ea-4a42-85cf-8f75731209d9",
    "metadata": {
     "tags": []
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c6811656-d54e-466e-89a1-f7e9719d4b61",
    "metadata": {
     "tags": []
@@ -444,9 +444,9 @@
     "tags": []
    },
    "source": [
-    "A Python script has been provided which can generate the sales data for the three given locations. \n",
+    "A Python script has been provided which can generate the sales data for the three given country locations. \n",
     "\n",
-    "Parameters:\n",
+    "The parameters for this script are:\n",
     "\n",
     "- cu: Currency, to account for conversions between stores.\n",
     "- s: Number of stores in that region.\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "90a51cc5-8f76-49ef-bf2d-793e4da95f05",
    "metadata": {
     "tags": []
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "262d95d3-5fa2-4eb4-a15c-1c1467f73713",
    "metadata": {
     "tags": []
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "8bfb38a7-7fe3-4c0a-a467-4b45d9ec64f9",
    "metadata": {
     "tags": []
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "7d436fd8-3f8b-4193-8db9-08f6804f79fb",
    "metadata": {
     "tags": []
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "7ff1df26-63c3-4c65-852f-6ad6159dfbfa",
    "metadata": {
     "tags": []
@@ -860,14 +860,14 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Hint:</b> As you can tell by the parameters to the create_csv.py functions in Section 2, we can synthetically generate data for as many countries as we want! Feel free to experiment, so long as the countries are declared in the cell above.\n",
+    "<b>Hint:</b> As you can tell by the parameters to the create_csv.py functions in Section 2, we can synthetically generate data for as many stores in as many European countries as we want! Feel free to experiment, so long as the countries are declared in the cell above.\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "30659125-05aa-4d65-a523-7f066097494d",
+   "execution_count": 15,
+   "id": "509607bd-a86f-4252-9c6e-354709521775",
    "metadata": {
     "tags": []
    },
@@ -942,6 +942,19 @@
       "+---------+-----------+----------+------------------+-----+-----+------------------+--------+-------+--------------+----+\n",
       "only showing top 20 rows\n",
       "\n",
+      "root\n",
+      " |-- PRODUCTID: integer (nullable = true)\n",
+      " |-- PRODUCT: string (nullable = true)\n",
+      " |-- TYPE: string (nullable = true)\n",
+      " |-- UNITPRICE: double (nullable = true)\n",
+      " |-- UNIT: string (nullable = true)\n",
+      " |-- QTY: integer (nullable = true)\n",
+      " |-- totalsales: double (nullable = true)\n",
+      " |-- currency: string (nullable = false)\n",
+      " |-- STORE: string (nullable = true)\n",
+      " |-- COUNTRY: string (nullable = true)\n",
+      " |-- YEAR: integer (nullable = true)\n",
+      "\n",
       "+---------+-----------+----------+---------+-----+-------+----------+--------+-------+-------+----+\n",
       "|PRODUCTID|    PRODUCT|      TYPE|UNITPRICE| UNIT|    QTY|TOTALSALES|CURRENCY|  STORE|COUNTRY|YEAR|\n",
       "+---------+-----------+----------+---------+-----+-------+----------+--------+-------+-------+----+\n",
@@ -994,6 +1007,19 @@
       "+---------+-----------+----------+---------+-----+-------+----------+--------+-------+-------+----+\n",
       "only showing top 20 rows\n",
       "\n",
+      "root\n",
+      " |-- PRODUCTID: integer (nullable = true)\n",
+      " |-- PRODUCT: string (nullable = true)\n",
+      " |-- TYPE: string (nullable = true)\n",
+      " |-- UNITPRICE: double (nullable = true)\n",
+      " |-- UNIT: string (nullable = true)\n",
+      " |-- QTY: integer (nullable = true)\n",
+      " |-- totalsales: double (nullable = true)\n",
+      " |-- currency: string (nullable = false)\n",
+      " |-- STORE: string (nullable = true)\n",
+      " |-- COUNTRY: string (nullable = true)\n",
+      " |-- YEAR: integer (nullable = true)\n",
+      "\n",
       "+---------+-----------+----------+-------------------+-----+-------+----------+--------+-------+-------+----+\n",
       "|PRODUCTID|    PRODUCT|      TYPE|          UNITPRICE| UNIT|    QTY|TOTALSALES|CURRENCY|  STORE|COUNTRY|YEAR|\n",
       "+---------+-----------+----------+-------------------+-----+-------+----------+--------+-------+-------+----+\n",
@@ -1044,31 +1070,23 @@
       "|       19|   beetroot|vegetables|             0.3916|   kg| 709158|4564824.52|     EUR|Store A|  Swiss|2019|\n",
       "|       20|    cabbage|vegetables|             0.4895|piece| 392883|4757140.74|     EUR|Store A|  Swiss|2019|\n",
       "+---------+-----------+----------+-------------------+-----+-------+----------+--------+-------+-------+----+\n",
-      "only showing top 20 rows"
+      "only showing top 20 rows\n",
+      "\n",
+      "root\n",
+      " |-- PRODUCTID: integer (nullable = true)\n",
+      " |-- PRODUCT: string (nullable = true)\n",
+      " |-- TYPE: string (nullable = true)\n",
+      " |-- UNITPRICE: double (nullable = true)\n",
+      " |-- UNIT: string (nullable = true)\n",
+      " |-- QTY: integer (nullable = true)\n",
+      " |-- totalsales: double (nullable = true)\n",
+      " |-- currency: string (nullable = false)\n",
+      " |-- STORE: string (nullable = true)\n",
+      " |-- COUNTRY: string (nullable = true)\n",
+      " |-- YEAR: integer (nullable = true)"
      ]
     }
    ],
-   "source": [
-    "for country in COUNTRY_LIST:\n",
-    "    # Load data from the DBs\n",
-    "    df = load_data(spark, country, data_path)\n",
-    "    df.show()\n",
-    "\n",
-    "    # Clean the data\n",
-    "    cleaned_df = clean_data(df, spark, country)\n",
-    "    \n",
-    "    # Write the cleaned data back to the Delta Table\n",
-    "    write_data(cleaned_df, country)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "509607bd-a86f-4252-9c6e-354709521775",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
    "source": [
     "for country in COUNTRY_LIST:\n",
     "    # Load data from the DBs\n",
@@ -1095,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "5e61cd90-dfe5-42cd-ad23-9fcc25739f16",
    "metadata": {
     "tags": []
@@ -1120,13 +1138,13 @@
      "output_type": "stream",
      "text": [
       "Table: czech\n",
-      "Saved in: /mounts/shared-volume/shared/retail-delta/data/czech/part-00000-90e5182a-79c2-4717-a5aa-6973936a287e-c000.snappy.parquet\n",
+      "Saved in: /mounts/shared-volume/shared/retail-delta/data/czech/part-00000-aad5d78b-5718-4d90-b75b-053214f32f25-c000.snappy.parquet\n",
       "\n",
       "Table: germany\n",
-      "Saved in: /mounts/shared-volume/shared/retail-delta/data/germany/part-00000-dce01a4c-201e-411e-90e4-40de3daeca58-c000.snappy.parquet\n",
+      "Saved in: /mounts/shared-volume/shared/retail-delta/data/germany/part-00000-870a4f33-67c5-441c-8485-1d2bf60e2bba-c000.snappy.parquet\n",
       "\n",
       "Table: swiss\n",
-      "Saved in: /mounts/shared-volume/shared/retail-delta/data/swiss/part-00000-0131426f-ab9d-4e2a-a1f4-44d8213fb4ee-c000.snappy.parquet"
+      "Saved in: /mounts/shared-volume/shared/retail-delta/data/swiss/part-00000-2b2383f3-a529-47c7-80fe-77f5c137706c-c000.snappy.parquet"
      ]
     }
    ],
