--- a/demos/smart-retail/02.query_with_ezpreso.ipynb
+++ b/demos/smart-retail/02.query_with_ezpreso.ipynb
@@ -90,17 +90,8 @@
    "source": [
     "1. Navigate back to the Unified Analytics dashboard.\n",
     "1. In the sidebar navigation menu, select `Data Engineering` > `Data Sources`.\n",
-    "1. Under the `Structured Data` tab, click `Add New Data Source`.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6c8c89c-fe10-419e-b5c4-dd152fd13549",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<img src=\"./images/exercise2/datasources.png\" alt=\"Drawing\" style=\"width: 600px;\"/>"
+    "1. Under the `Structured Data` tab, click `Add New Data Source`.\n",
+    "1. Under **Hive**, click `Create Connection`."
    ]
   },
   {
@@ -110,7 +101,6 @@
     "tags": []
    },
    "source": [
-    "4. Click `Create Connection` under **Hive**. \n",
     "- **Name**: `retail`\n",
     "- **Hive Metastore:** `discovery`\n",
     "- **Data Dir:** `file:/data/shared/retail-delta/data`\n",
@@ -152,7 +142,7 @@
     "tags": []
    },
    "source": [
-    "![image.png](./images/exercise2/tile.png)"
+    "![image.png](./images/exercise2/title.png)"
    ]
   },
   {
@@ -174,7 +164,7 @@
     "tags": []
    },
    "source": [
-    "![image.png](./images/exercise2/datacatalog.png)"
+    "<img src=\"./images/exercise2/datacatalog.png\" alt=\"Drawing\" style=\"width: 80%;\"/>"
    ]
   },
   {
@@ -205,7 +195,7 @@
     "tags": []
    },
    "source": [
-    "![image.png](./images/exercise2/QueryEditor.jpg)"
+    "<img src=\"./images/exercise2/QueryEditor.jpg\" alt=\"Drawing\" style=\"width: 80%;\"/>"
    ]
   },
   {
@@ -278,12 +268,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a892513-16c2-4467-b14a-afa866c6b591",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "You have now saved the dataset resulting from your SQL query as an **Asset**. Assets are made available to other applications via EzPresto, as you will explore in Exercise 3. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93394c5a-e892-4908-a14f-77cabd545b96",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## **2. Cached Assets in HPE Ezmeral Unified Analytics**\n",
+    "\n",
+    "A **Cached Asset** is the...\n",
+    "\n",
+    "To view our Cached Assets, including the one that we just created:\n",
+    "\n",
+    "1. In Unified Analytics, under the sidebar navigation menu, select `Data Engineering` > `Cached Assets`. \n",
+    "1. You should see an asset with Name `retail`. \n",
+    "1. Click the three dots associated with the `retail` asset.\n",
+    "\n",
+    "<img src=\"./images/exercise2/cachedasset.png\" alt=\"Drawing\" style=\"width: 900px;\"/>\n",
+    "\n",
+    "4. Click `View Columns`. \n",
+    "5. Validate there are eleven fields. \n",
+    "\n",
+    "Should you ever wish to run futher queries on a Cached Asset in the future, check the box next to an asset and click `Query Editor`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc431cae-33d3-4f9f-bedb-d61b4b43b166",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## **2. Jupyter Magic Commands on HPE Ezmeral Unified Analytics**\n",
+    "## **3. Jupyter Magic Commands on HPE Ezmeral Unified Analytics**\n",
     "\n",
     "Jupyter Notebooks Magic functions, also known as magic commands or magics, are commands that you can execute within a code cell.   \n",
     "Magics are not code of any language, but are shortcuts that extends the capabilities of a notebook. \n",
