--- a/demos/smart-retail/old/exercise4.ipynb
+++ b/demos/smart-retail/old/exercise4.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "009417ca-1757-4559-ada8-d4e746b730e7",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<img src=\"./images/logo.png\" alt=\"Drawing\" style=\"width: 500px;\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "68919b67-6a24-43b4-af82-7ab48d31457e",
    "metadata": {
     "tags": []
@@ -22,74 +12,6 @@
     "- Load the data\n",
     "- Train the model and store the artifacts & metrics to Mlflow\n",
     "- Prediction test to validate the results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16bf20e5-93e3-471b-be11-e794376c6ed8",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Set up the group parameter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05629c0e-68c9-409a-a415-4f0697e6e03d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Set your group name\n",
-    "group_name = \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33f0884a-a154-4874-9b42-b15f92c6f090",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Check if GROUP is empty\n",
-    "if not group_name:\n",
-    "    print(\"Please set your group name before proceeding to the next cell.\")\n",
-    "    # You can also raise an exception to stop execution if needed\n",
-    "    # raise ValueError(\"Group name is empty. Please set a valid group name.\")\n",
-    "else:\n",
-    "    print(\"Group name is set. Proceed to the next cell.\")\n",
-    "    # Your code for the next cell can go here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8378271b-00e8-441b-9f30-2efa23cfb899",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Double Checking"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64132b82-0c22-4433-93c9-1debff8c0cd0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Check if GROUP is empty\n",
-    "if not group_name:\n",
-    "    print(\"Please set your group name before proceeding to the next cell.\")\n",
-    "    # You can also raise an exception to stop execution if needed\n",
-    "    # raise ValueError(\"Group name is empty. Please set a valid group name.\")"
    ]
   },
   {
@@ -107,6 +29,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "145ffd3d-409d-4e3b-9935-23fb795b3f37",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 01.exploring_data_with_spark.ipynb   exercise5.ipynb\n",
+      " 02.query_with_ezpreso.ipynb          exercise6.ipynb\n",
+      " 03.visualizing_data_superset.ipynb   exercise7.ipynb\n",
+      " create_csv.py                        final_challenge.ipynb\n",
+      " currency_conversion.json             \u001b[0m\u001b[01;34mimages\u001b[0m/\n",
+      " \u001b[01;34mdata\u001b[0m/                                \u001b[01;34mold\u001b[0m/\n",
+      "\u001b[01;34m'end2end application'\u001b[0m/                requirements.txt\n",
+      " exercise4.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls /mnt/shared/end2end-main-exercises/exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "c129f625-a3e9-4b4b-a95e-ee05fbe6ba0e",
    "metadata": {
@@ -117,9 +66,7 @@
     "# Set parametes\n",
     "\n",
     "# adapt to your EZUA Domain name\n",
-    "EZAF_ENV = \"pe1.ezmeral.de\"\n",
-    "# type of demo (DemoContent - in this case fruit and vegetables) \n",
-    "DC = \"fruit\"\n",
+    "EZAF_ENV = \"i007ua.tryezmeral.com\"\n",
     "# path to end2end demo (not data)\n",
     "end2end_path = '/mnt/datasources/datafabric/ezua/end2end/' \n",
     "# path to data for model training, etc.\n",
@@ -131,9 +78,7 @@
     "model_name = \"end2end-retail-demo\"\n",
     "g_model_name = group_name + \"-\" + model_name\n",
     "# artifact_path = \"end2end-retail-demo\"\n",
-    "artifact_path = \"model\"\n",
-    "# password for UA user login (needed to get keycloak token)\n",
-    "UA_password = \"Hpepoc@123\""
+    "artifact_path = \"model\""
    ]
   },
   {
