--- a/demos/smart-retail/old/exercise5.ipynb
+++ b/demos/smart-retail/old/exercise5.ipynb
@@ -2,35 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f49fcb3-4274-4e7c-9869-e8dd69fa11f4",
+   "id": "a08918df-ae69-4e02-b350-82b0f1cdcdc9",
    "metadata": {
     "tags": []
    },
    "source": [
-    "<img src=\"./images/logo.png\" alt=\"Drawing\" style=\"width: 500px;\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20c186f6-e95f-463b-980c-1b8c83503285",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Exercise 5: Track your Experiment and Register the Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "93802462-7dfc-4c70-9d83-34abc68ffd1a",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## What we will cover:\n",
+    "# **Exercise 5:** Tracking, Registering and Managing models in MLflow\n",
+    "\n",
+    "\n",
     "- Find saved artifacts & metrics on MLflow\n",
     "- Register the model and move it to Production\n",
-    "- Prediction test to validate the results"
+    "- Prediction test to validate the results\n",
+    "\n",
+    "By the end of this exercise, you will have mastered the art of Machine Learning Operations (MLOps) with MLflow.\n",
+    "\n",
+    "Let's dive in!"
    ]
   },
   {
@@ -107,38 +93,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "701b45d6-67cc-4167-a12d-160d28f65f2d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "## set your group name (in quotes)\n",
-    "group_name = \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ba234c4-e5d0-4838-b16f-c9a7cde51d37",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Check if GROUP is empty\n",
-    "if not group_name:\n",
-    "    print(\"Please set your group name before proceeding to the next cell.\")\n",
-    "    # You can also raise an exception to stop execution if needed\n",
-    "    # raise ValueError(\"Group name is empty. Please set a valid group name.\")\n",
-    "else:\n",
-    "    print(\"Group name is set. Proceed to the next cell.\")\n",
-    "    # Your code for the next cell can go here"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4376592c-c778-400a-ba54-0f45fcc4de23",
    "metadata": {
@@ -146,22 +100,6 @@
    },
    "source": [
     "### Double Checking"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11fb254f-4e24-4d53-98ae-f9445dad98e9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Check if GROUP is empty\n",
-    "if not group_name:\n",
-    "    print(\"Please set your group name before proceeding to the next cell.\")\n",
-    "    # You can also raise an exception to stop execution if needed\n",
-    "    # raise ValueError(\"Group name is empty. Please set a valid group name.\")"
    ]
   },
   {
