Update Docker images
Update the Docker images for each tutorial to point to the images pushed
to our public HPE registry.

Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/rag-demos/question-answering-gpu/04.serve-llm.ipynb
+++ b/demos/rag-demos/question-answering-gpu/04.serve-llm.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "As such, you should build one custom Docker image at this point for the transformer component. The\n",
     "source code and the Dockerfile is provided in the corresponding folder: `dockerfiles/transformer`.\n",
-    "For your convenience, you can use the image we have pre-built for you: `dpoulopoulos/qna-transformer-gpu:v1.3.0-2d7386d`\n",
+    "For your convenience, you can use the image we have pre-built for you: `marketplace.us1.greenlake-hpe.com/ezmeral/ezkf/qna-transformer-gpu:v1.3.0-e658264`\n",
     "\n",
     "Once ready, proceed with the next steps."
    ]
@@ -197,7 +197,7 @@
     "\n",
     "transformer_image_widget = widgets.Text(\n",
     "    description=\"Image Name:\",\n",
-    "    placeholder=\"Default: dpoulopoulos/qna-transformer-gpu:v1.3.0-2d7386d\",\n",
+    "    placeholder=\"Default: marketplace.us1.greenlake-hpe.com/ezmeral/ezkf/qna-transformer-gpu:v1.3.0-e658264\",\n",
     "    layout=widgets.Layout(width='30%'))\n",
     "submit_button = widgets.Button(description=\"Submit\")\n",
     "success_message = widgets.Output()\n",
@@ -210,7 +210,7 @@
     "    with success_message:\n",
     "        success_message.clear_output()\n",
     "        if not transformer_image:\n",
-    "            transformer_image = \"dpoulopoulos/qna-transformer-gpu:v1.3.0-2d7386d\"\n",
+    "            transformer_image = \"marketplace.us1.greenlake-hpe.com/ezmeral/ezkf/qna-transformer-gpu:v1.3.0-e658264\"\n",
     "        print(f\"The name of the transformer image will be: '{transformer_image}'\")\n",
     "    submit_button.disabled = True\n",
     "\n",
