--- a/demos/rag-demos/question-answering-gpu/02.serve-vectorstore.ipynb
+++ b/demos/rag-demos/question-answering-gpu/02.serve-vectorstore.ipynb
@@ -30,7 +30,7 @@
     "predictor component. This involves creating a Docker image, which then serves as your ISVC endpoint. This approach\n",
     "grants you a high level of customization, ensuring the service fits your requirements. You can find the necessary code\n",
     "and the Dockerfile for this custom predictor in the `dockerfiles/vectorstore` directory. But for a quicker setup,\n",
-    "there's a pre-built option available: `dpoulopoulos/qna-vectorstore-gpu:v1.3.0-2d7386d`.\n",
+    "there's a pre-built option available: `marketplace.us1.greenlake-hpe.com/ezmeral/ezkf/qna-vectorstore-gpu:v1.3.0-e658264`.\n",
     "\n",
     "Lastly, you must also deploy the embeddings model. You can accomplish this using KServe with the Triton Inference Service\n",
     "backend. Triton requires the `model-repository` directory to be organized in a specific manner, which we will discuss in\n",
@@ -331,7 +331,7 @@
     "\n",
     "predictor_image_widget = widgets.Text(\n",
     "    description=\"Image Name:\",\n",
-    "    placeholder=\"Default: dpoulopoulos/qna-vectorstore-gpu:v1.3.0-2d7386d\",\n",
+    "    placeholder=\"Default: marketplace.us1.greenlake-hpe.com/ezmeral/ezkf/qna-vectorstore-gpu:v1.3.0-e658264\",\n",
     "    layout=widgets.Layout(width='30%'))\n",
     "submit_button = widgets.Button(description=\"Submit\")\n",
     "success_message = widgets.Output()\n",
@@ -344,7 +344,7 @@
     "    with success_message:\n",
     "        success_message.clear_output()\n",
     "        if not predictor_image:\n",
-    "            predictor_image = \"dpoulopoulos/qna-vectorstore-gpu:v1.3.0-2d7386d\"\n",
+    "            predictor_image = \"marketplace.us1.greenlake-hpe.com/ezmeral/ezkf/qna-vectorstore-gpu:v1.3.0-e658264\"\n",
     "        print(f\"The name of the predictor image will be: '{predictor_image}'\")\n",
     "    submit_button.disabled = True\n",
     "\n",
